fix line overlap issue

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,9 +1,14 @@
 // Specific CSS for your home-page
 .contain-featured-artist {
-	height: 500px;
-	overflow: hidden;
+  height: auto;
+	min-height: 500px;
+	// overflow: hidden;
 	.info-side {
 	    z-index: 1000;
+      @include media-breakpoint-down(sm) {
+        padding-left: 3rem;
+        padding-right: 3rem;
+      }
 		padding: 20px;
 	    flex-direction: column;
 	    justify-content: center;
